[JBWS-3794] Updating target containers